// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fieldAreaFactory Creates a text field 1`] = `
<div
  className="caldera-field-wrapper caldera-field-wrapper-text"
>
  <div
    className="components-base-control caldera-field caldera-field-text"
  >
    <div
      className="components-base-control__field"
    >
      <label
        className="components-base-control__label"
        htmlFor="inspector-text-control-0"
      >
        First Name
      </label>
      <input
        aria-describedby="inspector-text-control-0__help"
        className="components-text-control__input"
        id="firstName"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder={undefined}
        type="text"
        value="roy"
      />
    </div>
    <p
      className="components-base-control__help"
      id="inspector-text-control-0__help"
    >
      your first name
    </p>
  </div>
</div>
`;

exports[`fieldAreaFactory Creates an select field 1`] = `
<div
  className="caldera-field-wrapper caldera-field-wrapper-text"
>
  <div
    className="components-base-control caldera-field caldera-field-select"
  >
    <div
      className="components-base-control__field"
    >
      <label
        className="components-base-control__label"
        htmlFor="inspector-select-control-0"
      >
        Select Field Label
      </label>
      <select
        aria-describedby="inspector-select-control-0__help"
        className="components-select-control__input"
        id="selectFieldId"
        multiple={false}
        onChange={[Function]}
        value={1}
      >
        <option
          value={0}
        >
          Zero
        </option>
        <option
          value={1}
        >
          One
        </option>
        <option
          value={2}
        >
          Two
        </option>
      </select>
    </div>
    <p
      className="components-base-control__help"
      id="inspector-select-control-0__help"
    >
      Select field description
    </p>
  </div>
</div>
`;

exports[`fieldAreaFactory should create textarea 1`] = `
<div
  className="caldera-field-wrapper caldera-field-wrapper-text"
>
  <div
    className="components-base-control caldera-field caldera-field-text"
  >
    <div
      className="components-base-control__field"
    >
      <label
        className="components-base-control__label"
        htmlFor="inspector-text-control-1"
      >
        Your message
      </label>
      <input
        aria-describedby="inspector-text-control-1__help"
        className="components-text-control__input"
        id="textArea1"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder={undefined}
        type="text"
        value="The content of text area"
      />
    </div>
    <p
      className="components-base-control__help"
      id="inspector-text-control-1__help"
    >
      your first name
    </p>
  </div>
</div>
`;

exports[`fieldAreaFactory should create toggle 1`] = `
<div
  className="caldera-field-wrapper caldera-field-wrapper-text"
>
  <div
    className="components-base-control caldera-field caldera-field-text"
  >
    <div
      className="components-base-control__field"
    >
      <label
        className="components-base-control__label"
        htmlFor="inspector-text-control-2"
      >
        Toggle Label
      </label>
      <input
        aria-describedby="inspector-text-control-2__help"
        className="components-text-control__input"
        id="toggleFieldLabel"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder={undefined}
        type="text"
        value={undefined}
      />
    </div>
    <p
      className="components-base-control__help"
      id="inspector-text-control-2__help"
    >
      Toggle field description
    </p>
  </div>
</div>
`;
